refactor(ComponentProvider): getDependencyRefs 实现中将 getDependencies delegate